objects/Sales_Target__c.object
<CustomObject>
    <label>Sales Target</label>
    <nameField>
        <label>Sales Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Q1__c</fullName>
        <formula>April__c+May__c+June__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <formula>July__c+August__c+September__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <formula>October__c+November__c+December__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>July</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>June</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>April__c</fullName>
        <label>April</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>March</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>TODAY()&gt;= Fiscal_Year_Starts__c &amp;&amp; TODAY() &lt;= Fiscal_Year_Ends__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <label>August</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <label>January</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <label>October</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>December</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <label>February</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <label>November</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>September</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Target__c</fullName>
        <label>Annual Target</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Ends__c</fullName>
        <label>Fiscal Year Ends</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Unique_Key__c</fullName>
        <label>Target Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Starts__c</fullName>
        <label>Fiscal Year Starts</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Montly_Target__c</fullName>
        <formula>IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c), April__c,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 1, May__c ,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 2, June__c ,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 3, July__c ,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 4, August__c,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 5,September__c,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 6,October__c,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 7,November__c,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 8,December__c,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 9,January__c,
IF(Month(TODAY()) = Month(Fiscal_Year_Starts__c) + 10,February__c,March__c)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Montly Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Quarterly_Target__c</fullName>
        <formula>IF(AND(Month(TODAY()) &gt;= Month(Fiscal_Year_Starts__c),Month(TODAY()) &lt;= Month(Fiscal_Year_Starts__c) + 2), Q1__c,
IF(AND(Month(TODAY()) &gt;= Month(Fiscal_Year_Starts__c) + 3,Month(TODAY()) &lt;= Month(Fiscal_Year_Starts__c) + 5), Q2__c,
IF(AND(Month(TODAY()) &gt;= Month(Fiscal_Year_Starts__c) + 6,Month(TODAY()) &lt;= Month(Fiscal_Year_Starts__c) + 8), Q3__c, Q4__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarterly Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>My_Targets</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Annual_Target__c</columns>
        <columns>April__c</columns>
        <columns>May__c</columns>
        <columns>June__c</columns>
        <columns>July__c</columns>
        <columns>August__c</columns>
        <columns>September__c</columns>
        <columns>October__c</columns>
        <columns>November__c</columns>
        <columns>December__c</columns>
        <columns>January__c</columns>
        <columns>February__c</columns>
        <columns>March__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Targets</label>
    </listViews>
    <listViews>
        <fullName>All_Targets</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Annual_Target__c</columns>
        <columns>April__c</columns>
        <columns>May__c</columns>
        <columns>June__c</columns>
        <columns>July__c</columns>
        <columns>August__c</columns>
        <columns>September__c</columns>
        <columns>October__c</columns>
        <columns>November__c</columns>
        <columns>December__c</columns>
        <columns>January__c</columns>
        <columns>February__c</columns>
        <columns>March__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Targets</label>
    </listViews>
    <validationRules>
        <fullName>FiscalYrEndMarch</fullName>
        <active>true</active>
        <description>Fiscal Year Ends needs to to end on March 31, on a year later than the Fiscal Year Starts</description>
        <errorConditionFormula>NOT
(
AND
(
MONTH(Fiscal_Year_Ends__c) = 3,
DAY(Fiscal_Year_Ends__c) = 31,
YEAR(Fiscal_Year_Ends__c) = YEAR(Fiscal_Year_Starts__c) + 1
)
)</errorConditionFormula>
        <errorDisplayField>Fiscal_Year_Ends__c</errorDisplayField>
        <errorMessage>Your Fiscal Year needs to end on March 31 on the year following the start</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FiscalYrStartApril</fullName>
        <active>true</active>
        <description>Fiscal Year Starts, needs to start on April 1 of any year</description>
        <errorConditionFormula>NOT
(
AND
(
MONTH(Fiscal_Year_Starts__c) = 4,
DAY(Fiscal_Year_Starts__c) = 1
)
)</errorConditionFormula>
        <errorDisplayField>Fiscal_Year_Starts__c</errorDisplayField>
        <errorMessage>Fiscal Year needs to start on April 1st</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FiscalYrEndsIsLaterThanFiscalYrStart</fullName>
        <active>true</active>
        <description>Fiscal Year Ends should be later than Fiscal Year Starts</description>
        <errorConditionFormula>Fiscal_Year_Starts__c &gt; Fiscal_Year_Ends__c</errorConditionFormula>
        <errorDisplayField>Fiscal_Year_Starts__c</errorDisplayField>
        <errorMessage>The Fiscal Year needs to end after the Fiscal Year Start</errorMessage>
    </validationRules>
</CustomObject>